Fixed occasional gap between buttons, fixed alignment of occurrence counts.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -41,7 +41,7 @@ a {
     position: absolute;
     top: 50%;
     left: -3.8rem;
-    margin-top: -1.15rem;
+    margin-top: -1.1rem;
     padding: 0.5em 0.8em 0.4em 0.8em;
     font-family: 'symbolset';
     font-size: 1rem;
