--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -25,7 +25,7 @@
         position: absolute;
         right: 0;
         top: 50%;
-        margin: -0.7em 0 0 0;
+        margin: -0.85em 0 0 0;
         padding: 0 0.8em;
         line-height: 1.4rem;
         cursor: pointer;
