--- a/app/assets/stylesheets/occurrences.scss
+++ b/app/assets/stylesheets/occurrences.scss
@@ -52,6 +52,7 @@
       border-right-width: 0.1em;
       border-top-right-radius: 0;
       border-bottom-right-radius: 0;
+      box-shadow: 0.1em 0 0 0 $secondary-highlight-color;
     }
 
     &:last-child {
